# slack_knowledge_loop_tracker

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GeminiCodeAssist.md  LICENSE  PURPOSE.md  README.md  SYSTEM_CONSTITUTION.md  pyproject.toml
.audit/analysis/: as_is.yml  gap.yml  verification_scenarios.yml
.audit/config/: budget.yml  constraints.yml  intent.yml
.audit/execution/: feedback_to_auditor.yml  history.ndjson  state.json
.audit/execution/runs/run-20260207-111737/: plan.yml  summary.md
.audit/log/: audit_log.ndjson  claims.ndjson
.audit/output/: next_questions.md  self_score.yml  summary.md  verification_result.json
.audit/proposal/: roadmap.md
.audit/proposal/changes/: PR-001_installation_guide.md  PR-002_contributing_guide.md  PR-003_test_coverage.md  PR-004_slack_sdk.md  PR-005_slack_client.md  PR-006_env_config.md  PR-007_topic_ledger_format.md  PR-008_topic_ledger_class.md  PR-009_similarity_matching.md  PR-010_metrics_calculator.md  PR-011_report_generator.md  PR-012_dashboard.md
.audit/verification/: verify_core_functions.py
.audit/verification/test_data/: sample_messages.json
.concept/: autopilot.yml  charter.yml  claims.ndjson  conflicts.yml  decisions.md  invariants.yml  mappings.yml  ontology.yml  ontology_budget.yml  ontology_metrics.json  run_state.json  term_queue.yml  tombstones.yml
.github/workflows/: test.yml
src/: __init__.py  confidence_calculator.py  constants.py  event.py  extractor.py  pattern_matcher.py  topic_id_generator.py
tests/: __init__.py  test_extractor.py
(+9 files in other folders)
